--- a/index.html
+++ b/index.html
@@ -5,9 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drag Game</title>
 
+    <!-- Bootstrap -->
+<link rel="stylesheet"
+href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+
+<integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+crossorigin="anonymous">
+
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<a class="navbar-brand" href="#">Sonic Drag Game</a>
+</nav>
 
+
+</header>
+
+<div class="container mt-4">
+<h1 class="text-center mb-4">￿ Drag the Sonic to Earn Points! ￿</h1>
+<p class="text-center lead">
+Move the Sonic around the play area to increase your score.
+<br>Different zones may give <strong>more points</strong></p>
+
+<div class="row mt-4">
+<!-- Game Area -->
+<div class="col-xl-8 mb-4">
+<div id="containment-wrapper">
+<img id="sonic-pic" style="height: 100px; width:auto;"
+src="https://wallpapers.com/images/hd/sonic-pepe-hybrid-meme-7q02xockq7olde8h.jpg" alt="sonic meme">
+
+
+</div>
+</div>
+<!-- Score Panel -->
+<div class="col-sm-4">
+
+<div class="score-box">
+<h3 class="text-center">Score</h3>
+<h1 id="score-display" class="text-center text-primary">0</h1>
+<hr>
+<h5>Progress</h5>
+<div class="progress mb-3">
+<div id="score-progress" class="progress-bar" role="progressbar" style="width: 0%;">
+</div>
+</div>
+
+<div class="alert alert-info mt-3" id="status-message">
+Drag Doge to begin!
+</div>
+<p class="small text-muted mt-4">
+Tip: Try dragging Sonic near the edges. Something special might happen...
+</p>
+</div>
+</div>
+</div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-
+U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+crossorigin="anonymous"></script>
+
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+crossorigin="anonymous"></script>
+
+<!-- jQuery UI -->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+crossorigin="anonymous"></script>
+<!-- Custom Script -->
+<script src="scripts/script.js"></script>
 </body>
 </html>
+
